--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
       <div class="main">
         <p class="sign" align="center">Sign in</p>
         <form class="form1" method="POST">
-          <input class="un " type="text" align="center" placeholder="Username" name="userName">
+          <input class="un " type="text" align="center" placeholder="Enter email" name="email">
           <input class="pass" type="password" align="center" placeholder="Password" name="password">
           <button type="submit" class="submit">
             login
