--- a/views/details.ejs
+++ b/views/details.ejs
@@ -6,7 +6,7 @@
     <title>Details</title>
 </head>
 <body>
-    <form method="get" action="../testFile.pdf">
+    <form method="get" action="./output.pdf">
         <button type="submit">Download pdf</button>
      </form>
 </body>
