--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -26,7 +26,7 @@
             </button>  
 
         </form>     
-          <p class="forgot" align="center"><a href="/login">Already Registered?>login</a></p>         
+          <p class="forgot" align="center"><a href="/login">Already Registered? -> login</a></p>         
         </div>
          
     </body>
