--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -90,10 +90,13 @@ box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
 text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
 color: #E1BEE7;
 }
+a:hover{
+    color: #E040FB;
+}
 
 a {
 text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-color: #E1BEE7;
+color: #ec7eff;
 text-decoration: none
 }
 
