--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,30 +1,28 @@
-
 <html>
 
-    <head>
-      <link rel="stylesheet" href="css/style.css">
-      <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <link rel="stylesheet" href="css/login.css">
-      <title>Login</title>
-    </head>
-    
-    <body>
-      <div class="main">
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/login.css">
+    <title>Login</title>
+</head>
+
+<body>
+    <div class="main">
         <p class="sign" align="center">Sign in</p>
         <form class="form1" action="/login" method="POST">
-          <input class="un " type="text" align="center" placeholder="Enter email" name="email">
-          <input class="pass" type="password" align="center" placeholder="Password" name="password">
-          <p id="message"><%= message %></p>
-          <button type="submit" class="submit">
-            login
-          </button>
-        </form>  
-          <p class="forgot" align="center"><a href="#">Forgot Password?</p>
-                 
-                    
-        </div>
-         
-    </body>
-    
+            <input class="un " type="text" align="center" placeholder="Enter email" name="email">
+            <input class="pass" type="password" align="center" placeholder="Password" name="password">
+            <p id="message"><%= message %></p>
+            <button type="submit" class="submit">
+                login
+            </button>
+        </form>
+        <!-- <p class="forgot" align="center"><a href="#">Forgot Password?</a></p> -->
+        <p class="forgot" align="center"><a href="/signup">Create a new account </a></p>
+    </div>
+
+</body>
+
 </html>
