--- a/views/personaldetails.ejs
+++ b/views/personaldetails.ejs
@@ -69,7 +69,7 @@ a {
 </head>
 <body>
 
-<form action="/details" method="POST">
+<form action="/update" method="POST">
   <div class="container">
     <h1>Personal Details</h1>
     <p>Please fill in this form to create an resume.</p>
